packages/elvis/src/components/stepper.scss
@use '../variables/colors';
@use '../utilities/helpers';
@use '../variables/typography';

.e-stepper {
  position: relative;
  display: inline-flex;
  flex-direction: column;

  &__steps {
    display: flex;
    flex-direction: row;
    gap: 4px;
  }

  &__step {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 4px;

    &-number {
      @include typography.typography('title-xs');
      display: grid;
      width: 32px;
      height: 32px;
      border: 2px solid colors.color('elvia-off');
      border-radius: 50%;
      color: colors.color('font-color');
      cursor: pointer;
      place-items: center;
      user-select: none;
    }

    &-line {
      display: grid;
      width: 58px;
      height: 2px;
      border-radius: 50px;
      margin: 0;
      background: colors.color('elvia-off');
      place-items: center;

      &:not(:first-of-type) {
        display: none;
      }
    }

    &:first-of-type {
      .e-stepper__step-line {
        display: none;
      }
    }

    &-lines {
      display: flex;
      height: 32px;
      flex-direction: row;
      align-items: center;
      gap: 6px;

      .e-stepper__step-line {
        display: inline;
        width: 6px;
        height: 2px;
        margin: 0;
        background: colors.color('grey-30');
      }
    }
  }

  &__title {
    @include typography.typography('title-small');
    display: flex;
    justify-content: center;
    margin: 32px 0;
  }

  &__content {
    .e-stepper__actions {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
    }
  }

  &.e-stepper--vertical {
    flex-direction: column;
    gap: 4px;

    .e-stepper__step {
      flex-direction: column;
      align-items: flex-start;

      .e-stepper__step-line {
        width: 2px;
        height: 12px;
        margin-left: 15px;
      }

      .e-stepper__step-header {
        display: flex;
        flex-direction: row;
        gap: 16px;

        .e-stepper__step-title {
          display: flex;
          @include typography.typography('text-md');
          cursor: pointer;
        }
      }

      .e-stepper__content {
        padding: 28px 30px;
        border-left: 2px solid colors.color('grey-30');
        margin: 0 15px;
      }

      &.e-stepper__step--active .e-stepper__step-title {
        @include typography.typography('title-small');
      }

      &:last-of-type .e-stepper__content {
        border-color: transparent;
      }
    }

    .e-stepper__step-lines {
      display: flex;
      height: unset;
      flex-direction: column;
      align-items: flex-start;

      .e-stepper__step-line {
        display: flex;
        width: 2px;
        height: 6px;
        margin-left: 15px;
        background: colors.color('grey-30');
      }
    }
  }

  &.e-stepper--forced {
    .e-stepper__step {
      &-number {
        border: 2px solid colors.color('grey-30');
        color: colors.color('grey-30');
      }

      &.e-stepper__step--active ~ .e-stepper__step,
      &.e-stepper__step--active-done ~ .e-stepper__step {
        .e-stepper__step-number {
          @include helpers.hover() {
            &:hover {
              border-color: colors.color('grey-30');
              color: colors.color('grey-30');
              cursor: not-allowed;
            }
          }
        }

        .e-stepper__step-title {
          cursor: not-allowed;
        }

        .e-stepper__step-line {
          background: colors.color('grey-10');
        }
      }
    }
  }

  .e-stepper__step-number:hover,
  .e-stepper__step-number--hover {
    border-color: colors.color('elvia-charge');
    color: colors.color('font-color');
  }

  .e-stepper__step.e-stepper__step--active {
    .e-stepper__step-number {
      border-color: colors.color('elvia-charge');
      color: colors.color('font-color');
    }

    ~ .e-stepper__step {
      .e-stepper__step-line {
        background: colors.color('grey-30');
      }
    }

    .e-stepper__step-title {
      display: flex;
    }
  }

  .e-stepper__step.e-stepper__step--done {
    .e-stepper__step-number {
      @extend %checkbox-mark;
      @include helpers.user-select(none);
      border-color: colors.color('elvia-off');
      background: colors.color('elvia-off');
      color: transparent;
    }

    .e-stepper__step-line {
      background: colors.color('elvia-off');
    }
  }

  .e-stepper__step.e-stepper__step--active-done {
    .e-stepper__step-number {
      @extend %checkbox-mark;
      @include helpers.user-select(none);
      border-color: colors.color('elvia-charge');
      background: colors.color('elvia-off');
      color: transparent;
    }

    ~ .e-stepper__step {
      .e-stepper__step-line {
        background: colors.color('grey-30');
      }
    }

    .e-stepper__step-title {
      display: flex;
    }
  }

  .e-stepper__step.e-stepper__step--error {
    .e-stepper__step-number {
      border-color: colors.color('red');
      color: colors.color('font-color');
    }
  }
}

%checkbox-mark {
  position: relative;

  &::before {
    @include helpers.transform(translateX(10px) rotate(-43deg));
    @include helpers.transform-origin(left bottom);
    position: absolute;
    top: 12px;
    left: 2px;
    width: 2px;
    height: 8px;
    border-radius: 15px;
    background-color: colors.color('elvia-on');
    content: '';
  }

  &::after {
    @include helpers.transform(translateX(10px) rotate(43deg));
    @include helpers.transform-origin(left bottom);
    position: absolute;
    top: 4px;
    left: 1px;
    width: 2px;
    height: 15px;
    border-radius: 15px;
    background-color: colors.color('elvia-on');
    content: '';
  }
}

